# hackillinois-2026

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  vercel.json  zones_with_dropoffs_paths.geojson
backend/: requirements.txt
backend/app/: __init__.py  cis_client.py  config.py  gpa.py  main.py  models.py  storage.py
docs/: PROJECT_OVERVIEW.md
frontend/: tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  ClassList.tsx  DependencyGraph.tsx  SemflowLogo.tsx
frontend/src/pages/: Index.tsx
modal/: modal_inference.py  modal_whisper.py
relayroute/: __init__.py  config.py  database.py  main.py
relayroute.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
relayroute/alembic/: env.py
relayroute/alembic/versions/: 001_initial_schema.py  002_partner_api_key.py
relayroute/middleware/: auth.py
relayroute/models/: __init__.py  base.py  city.py  dropoff.py  order.py  partner.py  restaurant.py  task.py  zone.py
relayroute/routers/: app_dropoffs.py  app_orders.py  app_partners.py  app_setup.py  app_zones.py  partner.py  routing.py
relayroute/schemas/: __init__.py  city.py  common.py  dropoff.py  order.py  partner.py  restaurant.py  routing.py  zone.py
relayroute/services/: ai_reasoning.py  clustering.py  dropoff_placement.py  graph.py  maps.py  relay.py
relayroute/utils/: __init__.py
scripts/: contract_check.py  debug_bangalore_path.py  export_zone_geojson.py  smoke_test.py
web/: README.md  app.js  index.html  styles.css
